results/classifier/111/review/1772166
other: 0.241
semantic: 0.180
PID: 0.114
graphic: 0.090
performance: 0.069
device: 0.067
vnc: 0.053
permissions: 0.037
socket: 0.033
debug: 0.028
files: 0.027
network: 0.027
boot: 0.021
KVM: 0.012
debug: 0.192
files: 0.168
other: 0.159
PID: 0.108
semantic: 0.057
boot: 0.055
device: 0.054
network: 0.047
performance: 0.045
socket: 0.038
vnc: 0.023
graphic: 0.023
permissions: 0.021
KVM: 0.011

qemu 2.4.1: dereferencing pointer to incomplete type ‘struct ucontext’

Trying to compile qemu release 2.4.1

Getting compile error 

user-exec.c: In function ‘cpu_resume_from_signal’:
user-exec.c:72:37: error: dereferencing pointer to incomplete type ‘struct ucontext’
         sigprocmask(SIG_SETMASK, &uc->uc_sigmask, NULL);
                                     ^~
user-exec.c: In function ‘cpu_arm_signal_handler’:
user-exec.c:214:41: error: dereferencing pointer to incomplete type ‘struct ucontext’

2.4.1 is a very old release of QEMU. I would recommend moving to a more recent release.


I need this for raspberry pi emulation and the most recent doesn't work as you can see from my other bug post.

QEMU 2.4 is from 2015, and we didn't add raspi2 support until 2016. We've never supported the USB controller for the raspi boards. Perhaps you're using some other fork of QEMU? If so, better to talk to whoever's responsible for it.


v2.4 is not maintained anymore, so closing this as WONTFIX.

